sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:39: error: Unmatched closing brace '}' ignored here
}
^